--- a/about.css
+++ b/about.css
@@ -1,143 +1,459 @@
-.dark{
-font-weight:bold;
-color:black;
+.dark {
+    font-weight: bold;
+    color: black;
+}
 
+p {
+    color: gray;
+    font-size: 15px;
 }
-p{
-    color:gray;
-    font-size:15px;
-}
-body{
+
+body {
     background-color: gainsboro;
-    margin-left:40px;
-    margin-right:20px;
-    font-size:18px;
-    font-family:Arial, Helvetica, sans-serif;
-}
-a{
-    text-decoration:none;
-}
-.footer{
-height:200px;
-margin-top:80px;
-
-
-}
-.copy{
-width:580px;
-font-size:13px;
-color:black;
-
+    margin-left: 40px;
+    margin-right: 20px;
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.header{
-height:100px;
-width:100%;
-position:fixed;
-margin-top:-100px;
-background-color: gainsboro;
-display:inline-flex;
-
-}
-.mainlogo{
-margin-top:10px;
-
-
-}
-.tv{
-    display:inline-flex;
-    padding:10px;
-    color:grey;
-}
-.movies{
-    display:inline-flex;
-    padding:10px;
-    color:grey;
-}
-.sports{
-    display:inline-flex;
-    padding:10px;
-    color:grey;
-}
-.news{
-    display:inline-flex;
-    padding:10px;
-    color:grey;
-}
-.pre{
-    display:inline-flex;
-    padding:10px;
-    color:grey;
-}
-.new{
-    display:inline-flex;
-    padding:10px;
-    color:grey;
+a {
+    text-decoration: none;
 }
 
-
-.content{
-margin-top:100px;
-
-}
-.abt{
-color:gray;
-font-size:15px;
-
-
-}
-.abt:hover{
-    color:blue;
+.footer {
+    height: 200px;
+    margin-top: 80px;
 }
 
-
-
-.fbimg{
-border-radius: 5px;
-
-margin-left:700px;
-
+.copy {
+    width: 580px;
+    font-size: 13px;
+    color: black;
 }
-.twitimg{
-    margin-top:-50px;
+
+.header {
+    height: 100px;
+    width: 100%;
+    position: fixed;
+    margin-top: -100px;
+    background-color: gainsboro;
+    display: inline-flex;
+}
+
+.mainlogo {
+    margin-top: 10px;
+}
+
+.tv {
+    display: inline-flex;
+    padding: 10px;
+    color: grey;
+}
+
+.movies {
+    display: inline-flex;
+    padding: 10px;
+    color: grey;
+}
+
+.sports {
+    display: inline-flex;
+    padding: 10px;
+    color: grey;
+}
+
+.news {
+    display: inline-flex;
+    padding: 10px;
+    color: grey;
+}
+
+.pre {
+    display: inline-flex;
+    padding: 10px;
+    color: grey;
+}
+
+.new {
+    display: inline-flex;
+    padding: 10px;
+    color: grey;
+}
+
+.content {
+    margin-top: 100px;
+}
+
+.abt {
+    color: gray;
+    font-size: 15px;
+}
+
+.abt:hover {
+    color: blue;
+}
+
+.fbimg {
     border-radius: 5px;
-    margin-left:770px;
-    
+    margin-left: 700px;
+}
+
+.twitimg {
+    margin-top: -50px;
+    border-radius: 5px;
+    margin-left: 770px;
+}
+
+.fb {
+    margin-top: -10px;
+}
+
+.connect {
+    margin-left: 710px;
+    margin-top: -90px;
+    font-size: 15px;
+    color: gray;
+}
+
+.googleimg {
+    margin-top: -50px;
+    border-radius: 5px;
+    margin-left: 980px;
+}
+
+.appleimg {
+    margin-top: -50px;
+    border-radius: 5px;
+    margin-left: 1150px;
+}
+
+.connect2 {
+    margin-top: -85px;
+    font-size: 15px;
+    margin-left: 1000px;
+    color: gray;
+}
+
+.google {
+    margin-top: 60px;
+}
+
+@media screen and (min-width: 70px) and (max-width: 310px) {
+    .footer {
+        margin-left: 20px;
+        height: 500px;
     }
-
-.fb{
-margin-top:-10px;
-    
+    .abt {
+        margin-left: 2px;
+        line-height: 10px;
     }
-.connect{
-    margin-left:710px;
-        margin-top:-90px;
-        font-size:15px;
-        color:gray;
+    .copy {
+        width: 260px;
+        margin-top: 20px;
+        line-height: 20px;
+    }
+    .connect {
+        margin-left: 8px;
+        margin-top: 30px;
+    }
+    .fb {
+        margin-left: -690px;
+    }
+    .fbimg {
+        width: 40px;
+        height: 40px;
+    }
+    .twitimg {
+        width: 40px;
+        height: 40px;
+        margin-top: -40px;
+        margin-left: 5px;
+    }
+    .connect2 {
+        margin-top: -72px;
+        font-size: 13px;
+        margin-left: 160px;
+    }
+    .google {
+        margin-left: -50px;
+    }
+    .googleimg {
+        margin-left: 200px;
+        width: 90px;
+        height: 40px;
+        margin-top: 10px;
+    }
+    .appleimg {
+        margin-left: 200px;
+        margin-top: 10px;
+        width: 90;
+        height: 40px;
+    }
+}
 
- }
- .googleimg{
-    margin-top:-50px;
-    border-radius: 5px;
-    margin-left:980px;
+@media screen and (min-width: 311px) and (max-width: 350px) {
+    .footer {
+        margin-left: 20px;
+        height: 500px;
+    }
+    .abt {
+        margin-left: 2px;
+        line-height: 10px;
+    }
+    .copy {
+        width: 290px;
+        margin-top: 20px;
+        line-height: 20px;
+    }
+    .connect {
+        margin-left: 3px;
+        margin-top: 30px;
+    }
+    .fb {
+        margin-left: -700px;
+    }
+    .fbimg {
+        width: 40px;
+        height: 40px;
+    }
+    .twitimg {
+        width: 40px;
+        height: 40px;
+        margin-top: -40px;
+        margin-left: 5px;
+    }
+    .connect2 {
+        margin-top: -70px;
+        margin-left: 150px;
+    }
+    .google {
+        margin-top: 2px;
+    }
+    .googleimg {
+        margin-left: 150px;
+        width: 130px;
+        height: 40px;
+        margin-top: 10px;
+    }
+    .appleimg {
+        margin-left: 150px;
+        margin-top: 10px;
+        width: 130;
+        height: 40px;
+    }
+}
 
+@media screen and (min-width: 351px) and (max-width: 420px) {
+    .footer {
+        margin-left: 20px;
+        height: 500px;
+    }
+    .abt {
+        margin-left: 2px;
+        line-height: 10px;
+    }
+    .copy {
+        width: 340px;
+        margin-top: 20px;
+        line-height: 20px;
+    }
+    .connect {
+        margin-left: 8px;
+        margin-top: 30px;
+    }
+    .fb {
+        margin-left: -690px;
+    }
+    .fbimg {
+        width: 40px;
+        height: 40px;
+    }
+    .twitimg {
+        width: 40px;
+        height: 40px;
+        margin-top: -40px;
+        margin-left: 5px;
+    }
+    .connect2 {
+        margin-top: -70px;
+        margin-left: 200px;
+    }
+    .google {
+        margin-top: 2px;
+    }
+    .googleimg {
+        margin-left: 200px;
+        width: 130px;
+        height: 40px;
+        margin-top: 10px;
+    }
+    .appleimg {
+        margin-left: 200px;
+        margin-top: 10px;
+        width: 130;
+        height: 40px;
+    }
+}
 
- }
- .appleimg{
-    margin-top:-50px;
-    border-radius: 5px;
-    margin-left:1150px;
+@media screen and (min-width: 421px) and (max-width: 540px) {
+    .footer {
+        margin-left: 20px;
+        height: 700px;
+    }
+    .abt {
+        font-size: 13px;
+        margin-left: 2px;
+        line-height: 10px;
+    }
+    .copy {
+        width: 520px;
+        margin-top: 20px;
+        line-height: 20px;
+    }
+    .connect {
+        margin-left: 15px;
+        margin-top: 40px;
+    }
+    .fb {
+        margin-left: -680px;
+    }
+    .fbimg {
+        width: 40px;
+        height: 40px;
+    }
+    .twitimg {
+        margin-top: -39px;
+        width: 40px;
+        height: 40px;
+        margin-left: 5px;
+    }
+    .google {
+        margin-top: 2px;
+    }
+    .connect2 {
+        margin-top: -70px;
+        margin-left: 240px;
+    }
+    .google {
+        margin-left: -260px;
+    }
+    .googleimg {
+        margin-left: 490px;
+        width: 130px;
+        height: 40px;
+        margin-top: 10px;
+    }
+    .appleimg {
+        margin-left: 630px;
+        margin-top: -40px;
+        width: 130;
+        height: 40px;
+    }
+}
 
+@media screen and (min-width: 541px) and (max-width: 770px) {
+    .footer {
+        margin-left: 20px;
+        height: 400px;
+    }
+    .abt {
+        margin-left: 2px;
+        line-height: 10px;
+    }
+    .about {
+        width: 340px;
+    }
+    .copy {
+        width: 340px;
+        margin-top: 20px;
+        line-height: 20px;
+    }
+    .connect {
+        margin-left: 400px;
+        margin-top: -133px;
+    }
+    .fb {
+        margin-left: -300px;
+    }
+    .fbimg {
+        width: 40px;
+        height: 40px;
+    }
+    .twitimg {
+        width: 40px;
+        height: 40px;
+        margin-top: -40px;
+        margin-left: 5px;
+    }
+    .connect2 {
+        margin-top: -75px;
+        margin-left: 570px;
+    }
+    .google {
+        margin-top: 2px;
+    }
+    .googleimg {
+        margin-left: 570;
+        width: 130px;
+        height: 40px;
+        margin-top: 10px;
+    }
+    .appleimg {
+        margin-left: 570px;
+        margin-top: 10px;
+        width: 130;
+        height: 40px;
+    }
+}
 
- }
- .connect2{
-    margin-top:-85px;
-    font-size:15px;
-    margin-left:1000px;
-    color:gray;
-
- }
- .google{
-    margin-top:60px;
-        
-        }
+@media screen and (min-width: 771px) and (max-width: 1100px) {
+    .footer {
+        margin-left: 20px;
+        height: 500px;
+    }
+    .abt {
+        margin-left: 2px;
+    }
+    .copy {
+        width: 500px;
+        margin-top: 20px;
+    }
+    .connect {
+        margin-left: 600px;
+        margin-top: -95px;
+        font-size: 14px;
+    }
+    .fb {
+        margin-left: -100px;
+    }
+    .fbimg {
+        width: 40px;
+        height: 40px;
+    }
+    .twitimg {
+        width: 40px;
+        height: 40px;
+        margin-top: -40px;
+        margin-left: 5px;
+    }
+    .connect2 {
+        margin-top: -75px;
+        margin-left: 770px;
+    }
+    .google {
+        margin-left: 200px;
+        margin-top: 2px;
+    }
+    .googleimg {
+        margin-left: 570;
+        width: 130px;
+        height: 40px;
+        margin-top: 10px;
+    }
+    .appleimg {
+        margin-left: 570px;
+        margin-top: 10px;
+        width: 130;
+        height: 40px;
+    }
+}
